infra/k8s/test/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kinti-api
  namespace: kinti-test
spec:
  type: ClusterIP
  selector:
    app: kinti-api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
