infra/k8s/test/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kinti-web
  namespace: kinti-test
spec:
  type: ClusterIP
  selector:
    app: kinti-web
  ports:
    - name: http
      port: 80
      targetPort: 80
